force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/fields/sf_devops__Inspection_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Inspection_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The results of the remote operation to inspect this commit.</description>
    <label>Inspection Result</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Inspected Change Submissions</relationshipLabel>
    <relationshipName>Inspected_Change_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>