force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/fields/sf_devops__Open_Beta_Migrated__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Open_Beta_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal flag to determine if this change submission has been migrated to the open beta data model.  This field will be deleted in the future</description>
    <label>Open Beta Migrated</label>
    <type>Checkbox</type>
</CustomField>