force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/fields/sf_devops__Remote_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Reference__c</fullName>
    <description>Reference information for this submission on the remote VCS.  This is in VCS specific format.</description>
    <label>Remote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>