force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/fields/sf_devops__Removed_Remote_Changes__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Removed_Remote_Changes__c</fullName>
    <description>This field is deprecated and should not be referenced</description>
    <label>Removed Remote Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>