force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/fields/sf_devops__Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that submitted this change.</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>