force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/fields/sf_devops__Submitted_By_Name__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Submitted_By_Name__c</fullName>
    <description>The name of the user that did the submit, if the user is not in our organization.</description>
    <label>Submitted By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>