force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/fields/sf_devops__Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Submitted_On__c</fullName>
    <description>When this submission was submitted.</description>
    <label>Submitted On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>