force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/validationRules/sf_devops__Prior_Remote_Reference_External_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Prior_Remote_Reference_External_Only</fullName>
    <active>true</active>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>Deprecated</errorMessage>
</ValidationRule>