force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Change_Submission__c/validationRules/sf_devops__Work_Item_and_Repository_Same_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Work_Item_and_Repository_Same_Project</fullName>
    <active>true</active>
    <description>Verify that our work item and repository are from the same project.</description>
    <errorConditionFormula>AND(
 ISNEW() ,
  sf_devops__Work_Item__r.sf_devops__Project__r.sf_devops__Platform_Repository__c  &lt;&gt;  sf_devops__Repository__c 

)</errorConditionFormula>
    <errorMessage>Cannot be associated with a Work Item from a different project.</errorMessage>
</ValidationRule>